めんどいので細かいのもうcommitしちゃう
git-svn-id: http://svn.sourceforge.jp/svnroot/open-mgl/MGL/trunk@1046 6d62ff88-fa28-0410-b5a4-834eb811a934

--- a/mgllib/mgllib_VC90.vcproj
+++ b/mgllib/mgllib_VC90.vcproj
@@ -2498,6 +2498,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\AGH\include\agh_Mouse.h"
+					>
+				</File>
+				<File
 					RelativePath="..\AGH\include\agh_ScreenBase.h"
 					>
 				</File>
