--- a/mgllib/mgllib_VC90.vcproj
+++ b/mgllib/mgllib_VC90.vcproj
@@ -2394,6 +2394,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\august\AugustMusic.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\august\AugustMusic.h"
+					>
+				</File>
+				<File
 					RelativePath="src\august\AugustScreen2.cpp"
 					>
 					<FileConfiguration
@@ -2779,19 +2787,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3d8caps.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3d8caps.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3d8types.h"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3d8caps.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3d8types.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3d8types.h"
 				>
 			</File>
 			<File
@@ -2803,15 +2811,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8core.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3dx8core.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8effect.h"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8core.h"
 				>
 			</File>
 			<File
@@ -2819,7 +2823,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8math.h"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8effect.h"
 				>
 			</File>
 			<File
@@ -2827,11 +2831,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8math.inl"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8math.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3dx8math.inl"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8math.inl"
 				>
 			</File>
 			<File
@@ -2843,19 +2851,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8shape.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3dx8shape.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8tex.h"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8shape.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3dx8tex.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8tex.h"
 				>
 			</File>
 			<File
@@ -2907,11 +2915,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\MSL\include\msl_ra_list.h"
+				RelativePath="..\..\MSL\trunk\MSL\header\msl_ra_list.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\MSL\trunk\MSL\header\msl_ra_list.h"
+				RelativePath="..\MSL\include\msl_ra_list.h"
 				>
 			</File>
 			<File
