細かい修正の類 CMglDirectShowBase: Seek対応commitしてなかった＞＜
git-svn-id: http://svn.sourceforge.jp/svnroot/open-mgl/MGL/trunk@1229 6d62ff88-fa28-0410-b5a4-834eb811a934

--- a/mgllib/mgllib_VC90.vcproj
+++ b/mgllib/mgllib_VC90.vcproj
@@ -2340,6 +2340,10 @@
 				Name="Ver 2"
 				>
 				<File
+					RelativePath=".\src\august\AugustCommon2.cpp"
+					>
+				</File>
+				<File
 					RelativePath="src\august\AugustCommon2.h"
 					>
 				</File>
